Fixed issue with Audio button not showing on Details page. Fixed positioning issue for audio button in display cards

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -288,6 +288,12 @@ h1 {
 }
 
 /* Style for the Audio Button */
+.audioButtonCardWrapper {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
 .audioButton {
   background-color: #abcbf0;
   color: white;
@@ -297,15 +303,11 @@ h1 {
   border-radius: 50%;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
-  position: absolute;
-  top: 10px;
-  right: 10px;
   width: 40px;
   height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 20;
 }
 
 /* Button hover and active state */
@@ -403,6 +405,7 @@ h1 {
   gap: 2rem;
   margin-top: 2rem;
   flex-wrap: wrap;
+  border: solid 2px red;
 }
 
 .abilitiesContainer,
